fixed page overflowing outside body

--- a/web-dev/programming-articles-dev/dev/styles.pcss
+++ b/web-dev/programming-articles-dev/dev/styles.pcss
@@ -1,3 +1,8 @@
+html {
+  font-family: "Consolas", monospace;
+  font-size: 60%;
+}
+
 html,
 body,
 #container,
@@ -7,8 +12,6 @@ body,
 #tags_adder {
   height: 100%;
   width: 100%;
-  font-family: "Consolas", monospace;
-  font-size: 12px;
 }
 
 #items {
@@ -146,6 +149,8 @@ body,
 
   select {
     height: 2.5rem;
+    font-size: 1rem;
+    font-family: inherit;
   }
 
   select,
